src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Owning_Entity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Which Dimagi business unit owns this relationship.</inlineHelpText>
        <label>Business Unit</label>
        <referenceTo>Business_Unit__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <formula>CASE( Number_of_Open_Opps__c ,0, &apos;Passive&apos;,&apos;Active&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If there are no open opportunities the status is Passive.</inlineHelpText>
        <label>Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctNo__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Unique Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Annual_Budget_Range__c</fullName>
        <description>The Range of the annual budget, when an exact amount can&apos;t be found.</description>
        <label>Annual Budget Range</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;5,000,000</fullName>
                </value>
                <value>
                    <fullName>5,000,000 - 10,000,000</fullName>
                </value>
                <value>
                    <fullName>10,000,000 - 25,000,000</fullName>
                </value>
                <value>
                    <fullName>25,000,000 - 50,000,000</fullName>
                </value>
                <value>
                    <fullName>50,000,000 - 100,000,000</fullName>
                </value>
                <value>
                    <fullName>100,000,000 - 250,000,000</fullName>
                </value>
                <value>
                    <fullName>250,000,000 - 500,000,000</fullName>
                </value>
                <value>
                    <fullName>500,000,000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_Budget__c</fullName>
        <inlineHelpText>Used for multinational organizations to track their total budget per year.</inlineHelpText>
        <label>Annual Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <inlineHelpText>What field is the account in.</inlineHelpText>
        <label>Sector</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture and Food Security</fullName>
                </value>
                <value>
                    <fullName>Economic Development</fullName>
                </value>
                <value>
                    <fullName>Education and Training</fullName>
                </value>
                <value>
                    <fullName>Emergency Response</fullName>
                </value>
                <value>
                    <fullName>Financial Services for the Poor</fullName>
                </value>
                <value>
                    <fullName>Gender Equality and Women&apos;s Empowerment</fullName>
                </value>
                <value>
                    <fullName>Governance and Accountability</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Water, Sanitation, &amp; Hygiene</fullName>
                </value>
                <value>
                    <fullName>Legal, Human Rights</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City_Object__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>City</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>City__c.Country__c</field>
                <operation>equals</operation>
                <valueField>$Source.Country__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>City__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <inlineHelpText>The city the account is located in.</inlineHelpText>
        <label>City (old)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BAR__c</fullName>
        <label>Billing Address Record Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BAS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Billing Address Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BAV__c</fullName>
        <label>Billing Address Vacancy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BRDI__c</fullName>
        <label>Billing Residential Delivery Indicator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BTZ__c</fullName>
        <label>Billing Timezone</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__SAR__c</fullName>
        <label>Shipping Address Record Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__SAS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Shipping Address Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__SAV__c</fullName>
        <label>Shipping Address Vacancy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__SRDI__c</fullName>
        <label>Shipping Residential Delivery Indicator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__STZ__c</fullName>
        <label>Shipping Timezone</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Days_w_o_Activity__c</fullName>
        <description>Returns the # of days since last activity on Account</description>
        <formula>TODAY() - LastActivityDate</formula>
        <inlineHelpText>Returns the # of days since last activity on Account</inlineHelpText>
        <label>Days w/o Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <inlineHelpText>Should be a generic info email if applicable.</inlineHelpText>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enterprise_Relationship__c</fullName>
        <description>What Dimagi&apos;s relationship is with this group at the enterprise level</description>
        <inlineHelpText>What Dimagi&apos;s relationship is with this group at the enterprise level</inlineHelpText>
        <label>Account Status (Enterprise Relationship)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Strategic Partner</fullName>
                </value>
                <value>
                    <fullName>Actively Building</fullName>
                </value>
                <value>
                    <fullName>Trying to Warm</fullName>
                </value>
                <value>
                    <fullName>Passive and Friendly</fullName>
                </value>
                <value>
                    <fullName>Trying for First Contact</fullName>
                </value>
                <value>
                    <fullName>Passive and Not Friendly</fullName>
                </value>
                <value>
                    <fullName>Inactive / Not a Fit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Entity_BAA__c</fullName>
        <label>Entity BAA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follow_up_Date__c</fullName>
        <inlineHelpText>Use this field to mark a date you wish to be reminded to follow up with an account. Delete the field to turn off the reminder.</inlineHelpText>
        <label>Follow-up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Group_ID__c</fullName>
        <formula>IF(
ISBLANK( ParentId ),
Id,
IF(
ISBLANK( Parent.ParentId ),
ParentId,
IF(
ISBLANK( Parent.Parent.ParentId ),
Parent.ParentId,
IF(
ISBLANK( Parent.Parent.Parent.ParentId ),
Parent.Parent.ParentId,
IF(
ISBLANK( Parent.Parent.Parent.Parent.ParentId ),
Parent.Parent.Parent.ParentId,
IF(
ISBLANK( Parent.Parent.Parent.Parent.Parent.ParentId ),
Parent.Parent.Parent.Parent.ParentId,
Parent.Parent.Parent.Parent.Parent.ParentId
)
)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hierarchy Group ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Keep_Warm_Date__c</fullName>
        <inlineHelpText>Date you will be reminded to contact the account. Defaults to 90 days.</inlineHelpText>
        <label>Keep Warm Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Keep_Warm__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you want to be reminded to follow up with this Account</inlineHelpText>
        <label>Keep Warm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Opportunity_Update__c</fullName>
        <inlineHelpText>The last time an opportunity for this account was updated.</inlineHelpText>
        <label>Last Opportunity Update</label>
        <summarizedField>Opportunity.LastModifiedDate</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MSA_End_Date__c</fullName>
        <inlineHelpText>End date of MSA</inlineHelpText>
        <label>MSA End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MSA__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do we have an MSA with this account?</inlineHelpText>
        <label>MSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Memberships__c</fullName>
        <inlineHelpText>A list of memberships HQ belongs to</inlineHelpText>
        <label>Memberships</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Core Group</fullName>
                </value>
                <value>
                    <fullName>NetHope</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Naming_Convention__c</fullName>
        <formula>&apos;[Acronym] - [Full Name] - [Country/HQ]&apos;</formula>
        <label>Naming Convention</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Country_Office__c</fullName>
        <inlineHelpText>Use to mark confirmed lack of an office</inlineHelpText>
        <label>No Country Office</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Guatemala</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Kenya</fullName>
                </value>
                <value>
                    <fullName>Mozambique</fullName>
                </value>
                <value>
                    <fullName>Senegal</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>Swaziland</fullName>
                </value>
                <value>
                    <fullName>Zambia</fullName>
                </value>
                <value>
                    <fullName>Iraq</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Sudan (North)</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Papua New Guinea</fullName>
                </value>
                <value>
                    <fullName>Paraguay</fullName>
                </value>
                <value>
                    <fullName>Serbia</fullName>
                </value>
                <value>
                    <fullName>Somalia</fullName>
                </value>
                <value>
                    <fullName>Sweden</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>Yemen</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Vietnam</fullName>
                </value>
                <value>
                    <fullName>Iran</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Bosnia</fullName>
                </value>
                <value>
                    <fullName>Madagascar</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Active_Deployments__c</fullName>
        <inlineHelpText>How many deployments are currently active.</inlineHelpText>
        <label>Number of Active Deployments</label>
        <summaryFilterItems>
            <field>Project__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Project__c.Implementing_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Deployments__c</fullName>
        <inlineHelpText>The total number of deployments (open and closed)</inlineHelpText>
        <label>Number of Deployments</label>
        <summaryForeignKey>Project__c.Implementing_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Open_Opps__c</fullName>
        <label>Number of Open Opps</label>
        <summaryFilterItems>
            <field>Opportunity.IsClosed</field>
            <operation>equals</operation>
            <value>false</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_non_Active_Deployments__c</fullName>
        <inlineHelpText>Includes both Completed and Inactive deployments.</inlineHelpText>
        <label>Number of non-Active Deployments</label>
        <summaryFilterItems>
            <field>Project__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Project__c.Implementing_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Office_Type__c</fullName>
        <inlineHelpText>If this is a Headquarters account choose &quot;HQ&quot;. If it is a country-specific office choose &quot;Country Office&quot;.</inlineHelpText>
        <label>Office Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Country Office</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>HQ</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_Business_Unit_Name__c</fullName>
        <formula>Owner.Business_Unit_Name__c</formula>
        <label>Account Owner (BU)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Enterprise_Relationship__c</fullName>
        <formula>IF(
ISBLANK( ParentId ),
TEXT(Enterprise_Relationship__c) ,
IF(
ISBLANK( Parent.ParentId ),
TEXT(Parent.Enterprise_Relationship__c) ,
IF(
ISBLANK( Parent.Parent.ParentId ),
TEXT(Parent.Parent.Enterprise_Relationship__c) ,
IF(
ISBLANK( Parent.Parent.Parent.ParentId ),
TEXT(Parent.Parent.Parent.Enterprise_Relationship__c) ,
IF(
ISBLANK( Parent.Parent.Parent.Parent.ParentId ),
TEXT(Parent.Parent.Parent.Parent.Enterprise_Relationship__c) ,
IF(
ISBLANK( Parent.Parent.Parent.Parent.Parent.ParentId ),
TEXT(Parent.Parent.Parent.Parent.Parent.Enterprise_Relationship__c) ,
TEXT(Parent.Parent.Parent.Parent.Parent.Parent.Enterprise_Relationship__c)
)
)
)
)
)
)</formula>
        <label>Parent Account Enterprise Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salesforce_Account_ID__c</fullName>
        <formula>Id</formula>
        <label>Salesforce Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Validate = Need to contact; 
Connect = remind every 10 days; 
Active = an active opportunity; 
Passive = remind every 3 months.</inlineHelpText>
        <label>Status_old</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Validate</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Connect</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Passive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Area__c</fullName>
        <label>Sub Sector</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>*** Agriculture and Food Security ***</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Food Security</fullName>
                </value>
                <value>
                    <fullName>*** Economic Development ***</fullName>
                </value>
                <value>
                    <fullName>Rural Development</fullName>
                </value>
                <value>
                    <fullName>Safety &amp; Security</fullName>
                </value>
                <value>
                    <fullName>Urban Development</fullName>
                </value>
                <value>
                    <fullName>*** Education and Training ***</fullName>
                </value>
                <value>
                    <fullName>Adult Training</fullName>
                </value>
                <value>
                    <fullName>Child Education</fullName>
                </value>
                <value>
                    <fullName>Early Childhood Development</fullName>
                </value>
                <value>
                    <fullName>*** Emergency Response ***</fullName>
                </value>
                <value>
                    <fullName>Emergency Response</fullName>
                </value>
                <value>
                    <fullName>*** Financial Services for the Poor ***</fullName>
                </value>
                <value>
                    <fullName>Conditional Cash Transfer</fullName>
                </value>
                <value>
                    <fullName>Financial Services to the Poor</fullName>
                </value>
                <value>
                    <fullName>Mobile Banking</fullName>
                </value>
                <value>
                    <fullName>*** Gender Equality and Women&apos;s Emp ***</fullName>
                </value>
                <value>
                    <fullName>Gender Services</fullName>
                </value>
                <value>
                    <fullName>Sex Workers</fullName>
                </value>
                <value>
                    <fullName>*** Governance and Accountability ***</fullName>
                </value>
                <value>
                    <fullName>Governance</fullName>
                </value>
                <value>
                    <fullName>Social Accountability</fullName>
                </value>
                <value>
                    <fullName>*** Health ***</fullName>
                </value>
                <value>
                    <fullName>Cardiac Diseases</fullName>
                </value>
                <value>
                    <fullName>Care coordination</fullName>
                </value>
                <value>
                    <fullName>Cervical Cancer</fullName>
                </value>
                <value>
                    <fullName>Diagnostics</fullName>
                </value>
                <value>
                    <fullName>Diarrhea</fullName>
                </value>
                <value>
                    <fullName>Family Planning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tag__c</fullName>
        <inlineHelpText>Our own tag field since the normal tags suck so bad.  Don&apos;t delete other people&apos;s tags.</inlineHelpText>
        <label>Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Created_by_Cirrus_Insight__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this record was created by Cirrus Insight. This checkbox does not have to be included on the page layout, except with Contact Manager, Group, and Professional Edition organizations.</description>
        <label>Created by Cirrus Insight</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Account_Country_Clean_Up</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Country__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Office_Type__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Account_Status__c</columns>
        <columns>Area__c</columns>
        <columns>Tag__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
        </filters>
        <label>Account Country Clean Up</label>
    </listViews>
    <listViews>
        <fullName>Account_Country_equals_HQ</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Country__c</columns>
        <columns>City_Object__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Tag__c</columns>
        <columns>Area__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>HQ</value>
        </filters>
        <label>Account Country equals HQ</label>
    </listViews>
    <listViews>
        <fullName>Account_Management_DS</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Enterprise_Relationship__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Account_Owning_Entity__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Account_Status__c</columns>
        <columns>Country__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>Number_of_Open_Opps__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Devika</value>
        </filters>
        <label>Accounts Management - DS</label>
    </listViews>
    <listViews>
        <fullName>Account_Status_Connect</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Status__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Country__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>PARENT_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Connect</value>
        </filters>
        <label>My Accounts: Connect</label>
    </listViews>
    <listViews>
        <fullName>Accounts_60_days</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Owning_Entity__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Office_Type__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.LAST_UPDATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:60</value>
        </filters>
        <label>Accounts &gt; 60 days</label>
    </listViews>
    <listViews>
        <fullName>Accounts_Management_CP</fullName>
        <columns>Enterprise_Relationship__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Account_Owning_Entity__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Account_Status__c</columns>
        <columns>Country__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>Number_of_Open_Opps__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Carter</value>
        </filters>
        <label>Accounts Management - CP</label>
    </listViews>
    <listViews>
        <fullName>Accounts_Management_JJ</fullName>
        <columns>Enterprise_Relationship__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Account_Owning_Entity__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Account_Status__c</columns>
        <columns>Country__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>Number_of_Open_Opps__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Jonathan</value>
        </filters>
        <label>Accounts Management - JJ</label>
    </listViews>
    <listViews>
        <fullName>Accounts_Management_KSS</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Enterprise_Relationship__c</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Account_Owning_Entity__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Account_Status__c</columns>
        <columns>Country__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>Number_of_Open_Opps__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Kieran</value>
        </filters>
        <label>Accounts Management - KSS</label>
    </listViews>
    <listViews>
        <fullName>Accounts_Management_MH</fullName>
        <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>Parent_Account_Enterprise_Relationship__c</columns>
        <columns>Country__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Email_Address__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Mexico</value>
        </filters>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Brazil</value>
        </filters>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Colombia</value>
        </filters>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Dominican Republic</value>
        </filters>
        <label>Accounts Management - MH</label>
    </listViews>
    <listViews>
        <fullName>Accounts_Management_MOD</fullName>
        <columns>Enterprise_Relationship__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Account_Owning_Entity__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Account_Status__c</columns>
        <columns>Country__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>Number_of_Open_Opps__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Mike</value>
        </filters>
        <label>Accounts Management - MOD</label>
    </listViews>
    <listViews>
        <fullName>Accounts_Management_NL</fullName>
        <columns>Enterprise_Relationship__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Account_Owning_Entity__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Account_Status__c</columns>
        <columns>Country__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>Number_of_Open_Opps__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Neal</value>
        </filters>
        <label>Accounts Management - NL</label>
    </listViews>
    <listViews>
        <fullName>Accounts_Management_NN</fullName>
        <columns>Enterprise_Relationship__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Account_Owning_Entity__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Account_Status__c</columns>
        <columns>Country__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>Number_of_Open_Opps__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Nick</value>
        </filters>
        <label>Accounts Management - NN</label>
    </listViews>
</CustomObject>